--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,98 +1,104 @@
 /* version 1.0.1 */
 
+@font-face {
+    font-family: 'Spleen'; /* Font name you'll use in your styles */
+    src: url('spleen.otf') format('opentype'); /* Replace with correct path */
+    /* You can also include other font formats like woff or woff2 for better browser support */
+}
+
 body {
-margin: 0;
-padding: 0;
-background-color: #1A1A1A;
-line-height: 1.5;
-font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;;
+  margin: 0;
+  padding: 0;
+  background-color: #1A1A1A;
+  line-height: 1.5;
+  font-family: "Spleen";
 }
 h1, h2, h3, h4, h5, h6, h7, h8 {
-color: #B5E853;
-line-height: 1.5;
-font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;;
-text-align: left;
-margin: 0 0 20px;
+  color: #B5E853;
+  line-height: 1.5;
+  font-family: "Spleen";
+  text-align: left;
+  margin: 0 0 20px;
 }
 p {
-color: #FFFFFF;
-padding-left: 30px;
-font-size: 15px;
-font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;;
+  color: #FFFFFF;
+  padding-left: 30px;
+  font-size: 15px;
+  font-family: "Spleen";
 }
 .hr {
-border: 0;
-border-top: 2px dashed #B5E853;
+  border: 0;
+  border-top: 2px dashed #B5E853;
 }
 li {
-color: #FFFFFF;
-font-size: 15px;
-font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;;
+  color: #FFFFFF;
+  font-size: 15px;
+  font-family: "Spleen";
 }
 .button {
-text-decoration: none;
-text-align: left;
-background-color: #121212;
-color: white;
-border: 2px solid #000000;
-border-radius: 15px;
-padding: 10px 14px;
-font-size: 14px;
-display: inline-block;
-padding-left: 10px;
+  text-decoration: none;
+  text-align: left;
+  background-color: #121212;
+  color: white;
+  border: 2px solid #000000;
+  border-radius: 15px;
+  padding: 10px 14px;
+  font-size: 14px;
+  display: inline-block;
+  padding-left: 10px;
 }
 blockquote {
-border-left-style: dotted;
-border-left-width: 1px;
-border-left-color: gray;
-color: #8D8D8D;
-padding: 20px;
+  border-left-style: dotted;
+  border-left-width: 1px;
+  border-left-color: gray;
+  color: #8D8D8D;
+  padding: 20px;
 }
 td {
-color: #FFFFFF;
-border-spacing: 20px;
-text-align: left;
-padding: 8px;
+  color: #FFFFFF;
+  border-spacing: 20px;
+  text-align: left;
+  padding: 8px;
 }
 th {
-color: #FFFFFF;
-border-bottom: 1px dashed #B5E853;
-text-align: left;
-padding: 8px;
+  color: #FFFFFF;
+  border-bottom: 1px dashed #B5E853;
+  text-align: left;
+  padding: 8px;
 }
 dl {
-color: #FFFFFF;
-text-align: left;
-padding: 5px;
+  color: #FFFFFF;
+  text-align: left;
+  padding: 5px;
 }
 dt {
-color: #FFFFFF;
-font-weight: bold;
+  color: #FFFFFF;
+  font-weight: bold;
 }
 .smallimg {
-background-attachment: fixed;
-background-position: left;
-background-repeat: no-repeat;
-background-size: cover;
-width: 100px;
-height: 100px;
+  background-attachment: fixed;
+  background-position: left;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100px;
+  height: 100px;
 }
 .largeimg {
-background-attachment: fixed;
-background-position: left;
-background-repeat: no-repeat;
-background-size: cover;
-max-width: 100%;
-max-height: 100%;
-display: block;
+  background-attachment: fixed;
+  background-position: left;
+  background-repeat: no-repeat;
+  background-size: cover;
+  max-width: 100%;
+  max-height: 100%;
+  display: block;
 }
 .horizontalscroll {
-background-color: #242424;
-font-style: italic;
-overflow: auto;
-white-space: nowrap;
-color: #FFFFFF;
-padding: 10px;
+  background-color: #242424;
+  font-style: italic;
+  overflow: auto;
+  white-space: nowrap;
+  color: #FFFFFF;
+  padding: 10px;
 }
 ul {list-style: none;}
 ul li::before {content: ">>  "; color: #B5E853;}
@@ -116,3 +122,13 @@ ol {display: table; margin-left: 0; margin-right: auto; list-style-position: ins
 .topp {padding-top: 10px;}
 .left {padding-left: 30px}
 .mediumsize {font-size: 19px;}
+
+
+.cd{
+  text-align: center;
+  font-size: 60px;
+  font-weight: bold;
+  padding: 20px;
+  border: 2px solid gray; /* Adding border to the items */
+  margin: 10px;
+}
